Latest Features in 1.1.0:

-Added copy-paste feature for both new and pre-existing methods
-Added 'Cell' method to get the content of a specific cell
-Added 'Row' method to get the content of a row as a list
-Added 'column' method to get the content of a column as a list
-Added 'change' feature to change the content of a cell, after the creation of the table
-Added 'add' method to add the content of two cells and get the result
-Added 'add_all' method to add all the content from a cell to another cell and return the result
-Added 'html' method to get the html code of the table

for more information about all of these, see 'README.md' or visit- https://pypi.org/project/tabulux/