@@ -3,6 +3,11 @@ tabulux
 
 This package is for performing tablular operations and for making making tabular data.
 
+[Download this documetation](https://drive.google.com/uc?export=download&id=1rnqRuhxC5cBvK7LbjSIZ4LqcNUxlRAeu)
+This module requires 'pyperclip', for using the copy-paste feature
+You can still use this module without pyperclip, but it is strongly recommended to install pyperclip
+[visit PyPI-Pyperclip](https://pypi.org/project/pyperclip/)
+
 Import using:
 
     import tabulux
@@ -32,12 +37,16 @@ Available functions and methods:
 
 + **column_length()** - returns the column length 
 + **row_length()** - returns the row length
-+ **column(column_ID)** - returns all the elements in the `column_ID` as a list.
-+ **row(row_ID)** - returns all elements of the `row_ID`
 + **heads()** - returns the all the headings of the table as a list of strings
-+ **head(column_ID)** - returns the heading of the specified column as a string
-+ **cell(row_ID, column_ID)** - returns the content of the cell at the specified location
++ **head()** - returns the heading of the specified column as a string
++ **cell()** - returns the content of a specified cell
 + **display()** - prints the data in the table in a tabulated form
++ **row()** - returns a specific row from the table as a list of string
++ **column()** - returns a specific column from the table as a list of string
++ **change()** - use this to change the content of a cell after the creation of the table
++ **add()** returns the sum of two cell content
++ **add_all()** - returns the sum of a series of cells
++ **html()** - returns the html code of the table
 
 column_length()
 ----------------
@@ -46,10 +55,11 @@ Use this method when you need the column length of the table
 
 Syntax:
 
-    table_obj.column_length()
+    table_obj.column_length(copy={True/False})
 
 where:
   `table_obj` = a table object
+  `copy`      = This boolean attribute copies the result as text to your clipboard (False by default)
 
 returns integer representing the number of column in `table_obj`
 
@@ -60,10 +70,11 @@ Use this method when you need the number of rows of the table
 
 Syntax:
 
-    table_obj.row_length()
+    table_obj.row_length(copy={True/False})
 
 where:
   `table_obj` = a table object
+  `copy`      = This boolean attribute copies the result as text to your clipboard (False by default)
 
 returns integer representing the number of rows in `table_obj`
 
@@ -122,11 +133,12 @@ Use head() when you want a heading of a specific column from the table
 
 Syntax:
 
-    table_obj.head(column_number):
+    table_obj.head(column_number, copy={True/False})
 
 where:
   `table_obj`      =  A table object
   `column_number`  =  An integer representing the column number, whose heading you want
+  `copy`           =  A boolean- if True, copies the heading to your clipboard(False by default)
 
 returns the heading of the specified column of the table as a string.
 
@@ -137,12 +149,13 @@ Syntax:
 
 Use this method when you need the cell content of a cell
 
-    table_obj.cell(row_ID, column_ID)
+    table_obj.cell(row_ID, column_ID, copy={True/False})
 
 where,
   `table_obj` = table object
   `row`       = integer representing the row number (starting from 0), or, the heading of the column as a string
   `column`    = integer representing the column number (starting from 0)
+  `copy`      = a boolean, if true- copies the result to your clipboard(False,by default)
 
 returns the Cell Content of the specified location as String. 
 
@@ -171,11 +184,92 @@ Output:
 
 This method does not return anything
 
+change()
+--------
+
+Use change() method to change the content of a cell
+
+Syntax:
+
+	table_obj.change(row_ID, column_ID, new_content)
+	
+where, 
+  `table_obj`   =  a table object
+  `row_ID`      =  an integer representing the column number(starts from 0)
+  `column_ID`   =  an integer representing the column number(starts from 0), or the heading of the column as a string
+  `new_content` =  a string containg the new content
+  
+changes the of the specified column to the content in `new_content`
+
+you can also set a cell content to whatever text copied to your clipboard, by setting the 'paste' argument to True
+
+Syntax:
+
+	table_obj.change(row_ID, column_ID, new_content, paste=True)
+	
+the 'new_content' is ignored if paste is set to True, so you can leave the new content as `""`
+This cange the cell in the specified location to the text in the clipboard.
+
+Aditionaly, this method also returns the old content of the specified cell
+
+add()
+------
+
+The add method can be used to add two cells, if the cells are integers or can be converted to integers,
+Syntax:
+
+	table_obj.add(row1, column1, row2, column2, copy={True/False})
+	
+where:
+  `table_obj`    = a table object
+  `row1`       = cell row of the first cell as an integer
+  `column1`    = cell column of the first cell as an integer, or the heading of the column as a string
+  `row2 `      = cell row of the second cell as an integer
+  `column2`    = cell column of the second cell as an integer, or the heading of the column as a string
+  `copy`       = If this boolean attribute is set to True, the result will be copied to your clipboard(False by default)
+
+returns the sum of the two cells
+
+add_all()
+---------
+
+The add_all() method can be used to add all the cells from a cell to another cell, if all their values are integers
+
+Syntax:
+
+	table_obj.add_all(from_row, from_column, to_row, to_column, copy={True/False})
+
+where:
+  `table_obj`   = a table object
+  `from_row`    = row number of the first cell
+  `from_column` = column number of the first cell
+  `to_row`      = row number of the last cell
+  `to_column`   = column number of the last cell
+  `copy`        = a boolean, if True- the result will be copied to your clipboard (False by default)
+
+returns the sum of all the content of cells between the specified cells.
+
+If any cell content cannot be converted to an integer, 'TypeError' is raised
+
+NOTE: The the ending cell address(to_row, to_column) is not included in the sum.
+
+html()
+------
+
+The 'html()' method is used to get the html snippet of a table.
+Syntax:
+
+	table_obj.html(display={True/False}, copy={True/False}, indent={int})
+
+where:
+  `table_obj` = a table object
+  `display`   = if set to True, this boolean attribute will display the html snippet in the console\terminal, (False by default)
+  `copy`      = this boolean attribute, if set to True, copies the html snippet to you clipboard, and can by pasted to your html file(False by default)
+  `indent`    = indentation spaces that sould be applied, as integer (4 by default)
+
+returns the html snippet of the table as a string, from and including <table> to <\/table>
 
 
-
-This needs a lot of development, and this project is hosted on github for developmental purpose, 
-in which anyone can contribute, smallest of which are appreciated. 
 [Take me to this project's github repository page](https://github.com/John-pix/Tabulux-Python)
 
 
